Feature: location search - 경로 변경 - 불필요한 test 삭제

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,6 @@
-server.port: 8090
+server.port: 8080
 logging.level.com.codingtest: DEBUG
+
+kakao.api-key: 726860b15cfc3e15d04cd2af661e2791
+naver.client-id: Z2fXjAl8mEyTUeKtvQmC
+naver.client-secret: weDUbaBVcA
